# libzatmos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make.sh  zatmos
demo/: main.cpp
src/: atmosphere.cpp  atmosphere.hpp  atmospherics_device.cpp  atmospherics_device.hpp  atmospherics_element.cpp  atmospherics_element.hpp  atmospherics_mixture.hpp  atmospherics_reactions.cpp  atmospherics_reactions.hpp  device.cpp  device.hpp  elastic_atmosphere.cpp  elastic_atmosphere.hpp  main.cpp  registry.hpp
